# fastapi-controllers

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
fastapi_controllers/: __init__.py  controllers.py  definitions.py  helpers.py  routing.py
tests/functional/: conftest.py  test_async.py  test_sync.py
tests/unit/: test_controllers.py  test_helpers.py  test_routing.py
